Added a new layout
Let's hope this works.

--- a/ORFv2/PPC603gnu/Makefile
+++ b/ORFv2/PPC603gnu/Makefile
@@ -117,6 +117,14 @@ ORFv2_partialImage/$(MODE_DIR)/% : LIBPATH =
 ORFv2_partialImage/$(MODE_DIR)/% : LIBS = 
 ORFv2_partialImage/$(MODE_DIR)/% : OBJ_DIR := ORFv2_partialImage/$(MODE_DIR)
 
+ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Autonomous.o : $(PRJ_ROOT_DIR)/Autonomous.cpp $(FORCE_FILE_BUILD)
+	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
+
+
+ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Climber.o : $(PRJ_ROOT_DIR)/Climber.cpp $(FORCE_FILE_BUILD)
+	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
+
+
 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DecimalData.o : $(PRJ_ROOT_DIR)/InsightLT/DecimalData.cpp $(FORCE_FILE_BUILD)
 	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
 
@@ -141,7 +149,7 @@ ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/Zone.o : $(PRJ_ROOT_DIR)/
 	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
 
 
-ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/LCD.o : $(PRJ_ROOT_DIR)/LCD.cpp $(FORCE_FILE_BUILD)
+ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Launcher.o : $(PRJ_ROOT_DIR)/Launcher.cpp $(FORCE_FILE_BUILD)
 	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
 
 
@@ -149,18 +157,30 @@ ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Robot.o : $(PRJ_ROOT_DIR)/Robot.cpp
 	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
 
 
+ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Teleop.o : $(PRJ_ROOT_DIR)/Teleop.cpp $(FORCE_FILE_BUILD)
+	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
+
+
+ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/LCD.o : $(PRJ_ROOT_DIR)/Utilities/LCD.cpp $(FORCE_FILE_BUILD)
+	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
+
+
 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/wiring.o : $(PRJ_ROOT_DIR)/wiring.cpp $(FORCE_FILE_BUILD)
 	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
 
 
-OBJECTS_ORFv2_partialImage = ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DecimalData.o \
+OBJECTS_ORFv2_partialImage = ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Autonomous.o \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Climber.o \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DecimalData.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DisplayData.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/InsightLT.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/IntegerData.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/StringData.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/Zone.o \
-	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/LCD.o \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Launcher.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Robot.o \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Teleop.o \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/LCD.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/wiring.o
 
 ORFv2_partialImage/$(MODE_DIR)/ORFv2_partialImage.o : $(OBJECTS_ORFv2_partialImage)
@@ -220,9 +240,11 @@ ORFv2/$(MODE_DIR)/ORFv2_clean :
 
 force : 
 
-DEP_FILES := ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DecimalData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DisplayData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/InsightLT.d \
-	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/IntegerData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/StringData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/Zone.d \
-	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/LCD.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Robot.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/wiring.d
+DEP_FILES := ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Autonomous.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Climber.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DecimalData.d \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DisplayData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/InsightLT.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/IntegerData.d \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/StringData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/Zone.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Launcher.d \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Robot.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Teleop.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/LCD.d \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/wiring.d
 -include $(DEP_FILES)
 
 
