Added reference to unpacked WPILib
The pre-compiled WPILib wasn't working on my machine...

--- a/ORFv2/.project
+++ b/ORFv2/.project
@@ -3,6 +3,7 @@
 	<name>SimpleTemplate</name>
 	<comment></comment>
 	<projects>
+		<project>WPILib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
