Minor cleanup, along with some safety stuff.

--- a/ORFv2/PPC603gnu/Makefile
+++ b/ORFv2/PPC603gnu/Makefile
@@ -173,6 +173,10 @@ ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/Motor.o : $(PRJ_ROOT_DIR)
 	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
 
 
+ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/math.o : $(PRJ_ROOT_DIR)/Utilities/math.cpp $(FORCE_FILE_BUILD)
+	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
+
+
 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/wiring.o : $(PRJ_ROOT_DIR)/Utilities/wiring.cpp $(FORCE_FILE_BUILD)
 	$(TRACE_FLAG)if [ ! -d "`dirname "$@"`" ]; then mkdir -p "`dirname "$@"`"; fi;echo "building $@"; $(TOOL_PATH)ccppc $(DEBUGFLAGS_C++-Compiler) $(CC_ARCH_SPEC) -ansi -Wall  -MD -MP -mlongcall $(ADDED_C++FLAGS) $(IDE_INCLUDES) $(ADDED_INCLUDES) -DCPU=$(CPU) -DTOOL_FAMILY=$(TOOL_FAMILY) -DTOOL=$(TOOL) -D_WRS_KERNEL   $(DEFINES) -o "$@" -c "$<"
 
@@ -191,6 +195,7 @@ OBJECTS_ORFv2_partialImage = ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Insigh
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Systems/Launcher.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/LCD.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/Motor.o \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/math.o \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/wiring.o
 
 ORFv2_partialImage/$(MODE_DIR)/ORFv2_partialImage.o : $(OBJECTS_ORFv2_partialImage)
@@ -254,7 +259,8 @@ DEP_FILES := ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/DecimalData.
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/IntegerData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/StringData.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/InsightLT/Zone.d \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Modes/Autonomous.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Modes/Teleop.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Modes/Test.d \
 	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Robot.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Systems/DriveBase.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Systems/Launcher.d \
-	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/LCD.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/Motor.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/wiring.d
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/LCD.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/Motor.d ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/math.d \
+	 ORFv2_partialImage/$(MODE_DIR)/Objects/ORFv2/Utilities/wiring.d
 -include $(DEP_FILES)
 
 
